chore: refactor socketID to connectionID